--- a/smart.css
+++ b/smart.css
@@ -12,19 +12,20 @@ body {
     margin: 0px;
 }
 
+
 /*スクロールの動きのCSS*/
 
-
 .list-mv {
-	opacity: 0;
-	transform: translate(0,60px);
-	-webkit-transform: translate(0,60px);
-  transition: .8s;
+    opacity: 0;
+    transform: translate(0, 60px);
+    -webkit-transform: translate(0, 60px);
+    transition: .8s;
 }
+
 .mv {
-	opacity: 1.0;
-	transform: translate(0,0);
-	-webkit-transform: translate(0,0);
+    opacity: 1.0;
+    transform: translate(0, 0);
+    -webkit-transform: translate(0, 0);
 }
 
 #home {
@@ -87,13 +88,13 @@ body {
     display: none;
     /*通常時は非表示にしておきます*/
     position: fixed;
-    z-index: 3;
     /*bodyに対しての絶対位置指定です*/
     left: 10px;
     top: 10px;
     width: 30px;
     height: 25px;
     cursor: pointer;
+    z-index: 2;
 }
 
 
@@ -112,7 +113,7 @@ body {
     border-bottom: solid 3px white;
     -webkit-transition: .35s ease-in-out;
     -moz-transition: .35s ease-in-out;
-    transition: .35s ease-in-out
+    transition: .35s ease-in-out;
 }
 
 #navToggle span:nth-child(1) {
@@ -127,20 +128,10 @@ body {
     top: 22px
 }
 
-
-
-
-header {
-    z-index: 4;
-}
-
 header ul li {
     list-style-type: none;
     margin-left: -20px;
 }
-
-
-
 
 header ul li a {
     color: rgba(240, 236, 112, 1);
@@ -169,16 +160,14 @@ header nav {
     -moz-transition: .5s ease-in-out;
     transition: .5s ease-in-out;
     text-align: center;
+    z-index: 1;
 }
-
-
-
 
 
 /*display:noneだったボタンを display:blockにして表示します*/
 
 #navToggle {
-    display: block
+    display: block;
 }
 
 
@@ -230,7 +219,6 @@ header nav {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    z-index: -5;
 }
 
 #about, #info, #staff, #twitter {
@@ -262,7 +250,6 @@ h1 {
 #about {
     /*background-color: rgb(31, 48, 137);*/
     background-color: #3d4799;
-    z-index: -4;
 }
 
 .about_content {
@@ -287,7 +274,6 @@ p.speech {
     -ms-transform: rotate(-20deg);
     transform: rotate(-20deg);
     line-height: 110%;
-    z-index: -1;
 }
 
 p.speech span {
@@ -312,7 +298,6 @@ p.introduction {
 
 #info {
     background-color: #d8757d;
-    z-index: -4;
 }
 
 
@@ -347,7 +332,6 @@ p.introduction {
     background-color: #413f3f;
     border-radius: 5%;
     position: relative;
-    z-index: -1;
     flex-direction: column;
     align-items: center;
 }
@@ -380,7 +364,6 @@ p.when {
     text-align: left;
     padding: 0px;
     margin-left: 10px;
-    /*margin: 20px 10px 20px 10px;*/
     flex: 3;
 }
 
@@ -406,16 +389,15 @@ p.place span {
     font-family: "Noto Sans Japanese";
     font-weight: 100;
     margin: 10px 0px 0px 0px;
-    z-index: 2;
     width: 100%;
     text-align: center;
 }
 
 #info ul {
-  display: flex;
-  width: 100%;
-  flex-wrap: wrap;
-  margin-left: 10%;
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    margin-left: 10%;
 }
 
 #info ul li {
@@ -424,8 +406,6 @@ p.place span {
     color: white;
     font-size: 20px;
     font-family: "Noto Sans Japanese";
-    z-index: 2;
-
 }
 
 .background-info {
@@ -474,7 +454,6 @@ p.place span {
     background-color: #20b3d8;
 }
 
-
 img.human {
     width: 80%;
     margin-top: 5%;
@@ -489,40 +468,40 @@ img.human {
     margin-bottom: 25px;
 }
 
-.staff-intro p{
-  margin: 10px 0;
+.staff-intro p {
+    margin: 10px 0;
 }
 
 .remodal {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: flex-start;
-  height: 400px;
-  overflow: scroll;
-
+    display: flex;
+    flex-direction: row;
+    /*justify-content: center;*/
+    /*align-items:　flex-start;*/
+    height: 80%;
+    overflow: scroll;
 }
 
 .question {
-  font-size: 10px;
-  text-align: right;
+    font-size: 10px;
+    text-align: right;
 }
 
 .member {
-  display: inline-block;
-  width: 40%;
-  margin: 4%;
-  height: 250px;
-  overflow: hidden;
+    display: inline-table;
+    width: 40%;
+    margin: 2%;
+    height: 250px;
+    overflow: hidden;
 }
 
 .member img {
-  width: 90%;
+    width: 90%;
+    max-width: 150px;
 }
 
-.member p{
-  text-align: left;
-  font-size: 13px;
+.member p {
+    text-align: left;
+    font-size: 13px;
 }
 
 .background-staff {
