--- a/smart.css
+++ b/smart.css
@@ -459,6 +459,7 @@ img.human {
     margin-top: 5%;
 }
 
+
 .staff-intro a {
     display: block;
     text-decoration: none;
@@ -472,32 +473,55 @@ img.human {
     margin: 10px 0;
 }
 
+.modal-close {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+}
+
 .remodal {
-    display: flex;
+    display: inline-block;
+    ;
     flex-direction: row;
+    box-sizing: border-box;
+    width: 100%;
+    height: 80%;
+    margin-bottom: 10px;
+    padding: 10px;
+    -webkit-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    position: relative;
+    outline: 0;
+    -moz-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    text-size-adjust: 100%;
+    text-align: center;
+    background-color: white;
     /*justify-content: center;*/
     /*align-items:　flex-start;*/
-    height: 80%;
-    overflow: scroll;
 }
+
+
 
 .question {
     font-size: 10px;
     text-align: right;
 }
 
-.member {
-    display: inline-table;
-    width: 40%;
-    margin: 2%;
-    height: 250px;
-    overflow: hidden;
+.memberBox {
+    position: relative;
+    display: inline-block;
+    flex-direction: row;
+    height: 95%;
+    width: 100%;
+    overflow: scroll;
 }
 
-.member img {
-    width: 90%;
-    max-width: 150px;
-}
+
+
+
+
 
 .member p {
     text-align: left;
@@ -525,4 +549,13 @@ img.human {
 .twitter-box {
     display: flex;
     justify-content: center;
+}
+
+.creator {
+  background-color: gray;
+  color: white;
+  display: flex;
+  justify-content: center;
+  font-size: 11px;
+  font-family: 'Ubuntu Condensed', sans-serif;
 }
